Ability to unload an EDF useful for me

--- a/SleepApneaAnalysisTool/SleepApneaAnalysisTool/MainWindow.xaml
+++ b/SleepApneaAnalysisTool/SleepApneaAnalysisTool/MainWindow.xaml
@@ -75,12 +75,12 @@
 
     <Grid Margin="0,0,0,0">
         <TabControl Margin="10" FocusVisualStyle="{x:Null}">
-            
+
             <mtr:MetroTabItem Header="Home" Height="40">
                 <Grid>
                     <Grid HorizontalAlignment="Left" Width="494" Margin="0,70,0,0">
                         <TextBlock Text="Open Files" Height="34" Width="279" VerticalAlignment="Top" HorizontalAlignment="Left" FontSize="18"  Margin="10,15,0,0"/>
-                        <TextBlock x:Name="TextBlock_OpenEDF" TextDecorations="Underline" Height="34" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,49,0,0" FontSize="14"><Hyperlink Click="TextBlock_OpenEDF_Click" FontSize="14"><Run Text="Open EDF..."/></Hyperlink></TextBlock>
+                        <TextBlock x:Name="TextBlock_OpenEDF" TextDecorations="Underline" Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,49,0,0" FontSize="14"><Hyperlink Click="TextBlock_OpenEDF_Click" FontSize="14"><Run Text="Open EDF..."/></Hyperlink></TextBlock>
                         <TextBlock Text="Recent Files" Height="34" VerticalAlignment="Top" FontSize="18" Margin="0,15,10,0" HorizontalAlignment="Right" Width="279"/>
                         <ItemsControl x:Name="itemControl_RecentEDF" Foreground="Blue" BorderBrush="Transparent" Margin="0,49,10,15" FontSize="14" HorizontalAlignment="Right" Width="279">
                             <ItemsControl.ItemTemplate>
@@ -91,6 +91,7 @@
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                         </ItemsControl>
+                        <TextBlock TextDecorations="Underline"  Width="94" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="10,68,0,0" FontSize="14"><Hyperlink Click="TextBlock_UnloadEDF_Click" FontSize="14"><Run Text="Unload EDF..."/></Hyperlink></TextBlock>
                     </Grid>
                 </Grid>
             </mtr:MetroTabItem>
