--- a/SleepApneaAnalysisTool/SleepApneaAnalysisTool/MainWindow.xaml
+++ b/SleepApneaAnalysisTool/SleepApneaAnalysisTool/MainWindow.xaml
@@ -322,7 +322,7 @@
                                 <Label Content="Signal" FontSize="14" Width="50" HorizontalAlignment="Left" Margin="10,5,0,5" HorizontalContentAlignment="Left" Grid.Column="1" Grid.Row="2"/>
                                 <ComboBox Margin="60,5,10,5" IsEnabled="{Binding EEGEDFNavigationEnabled}" ItemsSource="{Binding AllNonHiddenSignals}" SelectedValue="{Binding EEGEDFSelectedSignal}" Grid.Column="1" Grid.Row="2"/>
                                 <Label Content="Epoch" FontSize="14" Width="70" HorizontalAlignment="Left" Margin="0,5,0,5" HorizontalContentAlignment="Left" Grid.Column="2" Grid.Row="2"/>
-                                <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding EpochForAnalysis}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
+                                <mtr:NumericUpDown FontSize="14"  Margin="55,5,10,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding EpochForAnalysis, Delay=700}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="2" Grid.Row="2"/>
                                 <!-- Export -->
                                 <Label Content="From" FontSize="14" Margin="0,8,0,2" HorizontalContentAlignment="Left" Grid.Column="3" Grid.Row="1" HorizontalAlignment="Left" Width="70"/>
                                 <mtr:NumericUpDown FontSize="14" Margin="65,5,10,5" TextAlignment="Center" IsEnabled="{Binding EEGEDFNavigationEnabled}" Value="{Binding ExportEpochStart}" Minimum="{Binding EEGEDFStartRecordMin}" Maximum="{Binding EEGEDFStartRecordMax}" Grid.Column="3" Grid.Row="1"/>
